src/objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Sub_Type__c</fullName>
        <label>Project Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Create Custom Report</fullName>
                    <isActive>false</isActive>
                    <label>Create Custom Report</label>
                </value>
                <value>
                    <fullName>Create Standard Report</fullName>
                    <isActive>false</isActive>
                    <label>Create Standard Report</label>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                    <isActive>false</isActive>
                    <label>Custom Report</label>
                </value>
                <value>
                    <fullName>Data Science: Coaching Data</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Coaching Data</label>
                </value>
                <value>
                    <fullName>Data Science: Creating Metabase Dashboard</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Creating Metabase Dashboard</label>
                </value>
                <value>
                    <fullName>Data Science: Performance Guarantee Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Performance Guarantee Analysis</label>
                </value>
                <value>
                    <fullName>Data Science: Report Format Change/Adding Fields</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Report Format Change/Adding Fields</label>
                </value>
                <value>
                    <fullName>Data Science: Report Re-Runs</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Report Re-Runs</label>
                </value>
                <value>
                    <fullName>Data Science: Turn Off or Suspend Reports</fullName>
                    <isActive>false</isActive>
                    <label>Data Science: Turn Off or Suspend Reports</label>
                </value>
                <value>
                    <fullName>Data Source Change</fullName>
                    <isActive>false</isActive>
                    <label>Data Source Change</label>
                </value>
                <value>
                    <fullName>DOPS: Add Email Addresses</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Add Email Addresses</label>
                </value>
                <value>
                    <fullName>DOPS: Ad Hoc Term File</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Ad Hoc Term File</label>
                </value>
                <value>
                    <fullName>DOPS: Analysis of Eligible Population</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Analysis of Eligible Population</label>
                </value>
                <value>
                    <fullName>DOPS: Compare Population Lists</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Compare Population Lists</label>
                </value>
                <value>
                    <fullName>DOPS: Complete Data Spec Form for Partners</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Complete Data Spec Form for Partners</label>
                </value>
                <value>
                    <fullName>DOPS: Complete Data Spec for Partners</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Complete Data Spec for Partners</label>
                </value>
                <value>
                    <fullName>DOPS: Data Quality Fix</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Data Quality Fix</label>
                </value>
                <value>
                    <fullName>DOPS: Investigate Member&apos;s Diagnosis Code</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Investigate Member&apos;s Diagnosis Code</label>
                </value>
                <value>
                    <fullName>DOPS: List of Eligible Population</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: List of Eligible Population</label>
                </value>
                <value>
                    <fullName>DOPS: Other / New</fullName>
                    <isActive>false</isActive>
                    <label>DOPS: Other / New</label>
                </value>
                <value>
                    <fullName>ENR MKTG: Whitelist Client Emails</fullName>
                    <isActive>false</isActive>
                    <label>ENR MKTG: Whitelist Client Emails</label>
                </value>
                <value>
                    <fullName>Direct &gt; 2,500 Employees</fullName>
                    <label>Enterprise</label>
                </value>
                <value>
                    <fullName>ESI HC 360</fullName>
                </value>
                <value>
                    <fullName>Express Scripts (ESI)</fullName>
                </value>
                <value>
                    <fullName>Incentive Setup and Reporting</fullName>
                </value>
                <value>
                    <fullName>Make Department Specific Request</fullName>
                    <isActive>false</isActive>
                    <label>Make Department Specific Request</label>
                </value>
                <value>
                    <fullName>Partner - CVS</fullName>
                </value>
                <value>
                    <fullName>Population Refresh</fullName>
                    <isActive>false</isActive>
                    <label>Population Refresh</label>
                </value>
                <value>
                    <fullName>Select Partner Account - Parent Project</fullName>
                </value>
                <value>
                    <fullName>Downmarket</fullName>
                    <label>Select Partner Accounts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Template_Category__c</fullName>
        <label>Project Template Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad Hoc Requests</fullName>
                </value>
                <value>
                    <fullName>Data Operations Requests</fullName>
                </value>
                <value>
                    <fullName>Data Science Requests</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <isActive>false</isActive>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Project Template</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                    <label>Technology Requests</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Template_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad Hoc DS Request</fullName>
                    <isActive>false</isActive>
                    <label>Ad Hoc DS Request</label>
                </value>
                <value>
                    <fullName>Ad Hoc Request</fullName>
                    <isActive>false</isActive>
                    <label>Ad Hoc Request</label>
                </value>
                <value>
                    <fullName>Carrier/Contract Path Change</fullName>
                </value>
                <value>
                    <fullName>Client Incentives</fullName>
                </value>
                <value>
                    <fullName>CMC Migration/Deactivation</fullName>
                </value>
                <value>
                    <fullName>Convert SPA to Enterprise</fullName>
                </value>
                <value>
                    <fullName>Cross-Sell (New Program)</fullName>
                </value>
                <value>
                    <fullName>Data Operations Request</fullName>
                    <isActive>false</isActive>
                    <label>Data Operations Request</label>
                </value>
                <value>
                    <fullName>Data Science Request</fullName>
                    <isActive>false</isActive>
                    <label>Data Science Request</label>
                </value>
                <value>
                    <fullName>Data Source Change</fullName>
                </value>
                <value>
                    <fullName>Divestiture</fullName>
                </value>
                <value>
                    <fullName>Enterprise Client Termination</fullName>
                </value>
                <value>
                    <fullName>New Client / Contract Path</fullName>
                </value>
                <value>
                    <fullName>New Client CVS</fullName>
                    <isActive>false</isActive>
                    <label>New Client CVS</label>
                </value>
                <value>
                    <fullName>Population Expansion</fullName>
                </value>
                <value>
                    <fullName>Population Refresh</fullName>
                    <isActive>false</isActive>
                    <label>Population Refresh</label>
                </value>
                <value>
                    <fullName>Report Request</fullName>
                    <isActive>false</isActive>
                    <label>Report Request</label>
                </value>
                <value>
                    <fullName>SPA Carrier/Contract Path Change</fullName>
                </value>
                <value>
                    <fullName>SPA Client Termination</fullName>
                </value>
                <value>
                    <fullName>Whole Person Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Details__c</fullName>
        <inlineHelpText>Please provide details and/or insights regarding ROI Analysis for this client</inlineHelpText>
        <label>ROI Analysis Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_discussed__c</fullName>
        <label>ROI Analysis discussed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitable_Population_BH__c</fullName>
        <label>Recruitable Population - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitable_Population_DM__c</fullName>
        <label>Recruitable Population - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitable_Population_HTN__c</fullName>
        <label>Recruitable Population - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitable_Population_PD__c</fullName>
        <label>Recruitable Population - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruitable_Population_WM__c</fullName>
        <label>Recruitable Population - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Details__c</fullName>
        <inlineHelpText>Please provide details if we have set up any referrals for this client</inlineHelpText>
        <label>Referral Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_Box_URL__c</fullName>
        <formula>TASKRAY__trOpportunity__r.Box_Contract_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Opportunity Box URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Description__c</fullName>
        <description>JENGA-1149</description>
        <inlineHelpText>This field is required when Report Type is Custom</inlineHelpText>
        <label>Report Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Field_Names__c</fullName>
        <label>Report Field Names</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Report_Type_Detail__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo ID</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>Client Name</fullName>
                </value>
                <value>
                    <fullName>Insurer Name (Health Plan)</fullName>
                </value>
                <value>
                    <fullName>Insurance Member ID</fullName>
                </value>
                <value>
                    <fullName>Insurance Group ID</fullName>
                </value>
                <value>
                    <fullName>Insurer Relationship</fullName>
                </value>
                <value>
                    <fullName>Date of Birth</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>First Enrollment Date</fullName>
                </value>
                <value>
                    <fullName>First Device Ship Date</fullName>
                </value>
                <value>
                    <fullName>First Device Activation Date</fullName>
                </value>
                <value>
                    <fullName>Last Device Usage Date</fullName>
                </value>
                <value>
                    <fullName>Last Lapsed Date</fullName>
                </value>
                <value>
                    <fullName>Last Deactivation Date</fullName>
                </value>
                <value>
                    <fullName>Timestamp</fullName>
                </value>
                <value>
                    <fullName>Blood Glucose Value</fullName>
                </value>
                <value>
                    <fullName>Meal Tag</fullName>
                </value>
                <value>
                    <fullName>Feel Tag</fullName>
                </value>
                <value>
                    <fullName>Systolic</fullName>
                </value>
                <value>
                    <fullName>Diastolic</fullName>
                </value>
                <value>
                    <fullName>Mean Arterial Pressure</fullName>
                </value>
                <value>
                    <fullName>Heart Rate</fullName>
                </value>
                <value>
                    <fullName>Height</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
                <value>
                    <fullName>Blood Pressure Value</fullName>
                </value>
                <value>
                    <fullName>Outreach Mode</fullName>
                </value>
                <value>
                    <fullName>Member-CDE Contact (Y/N)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Request_Type__c</fullName>
        <label>Report Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Type_Detail__c</fullName>
        <label>Report Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Report_Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo Membership</fullName>
                </value>
                <value>
                    <fullName>Blood Glucose Readings</fullName>
                </value>
                <value>
                    <fullName>Blood Pressure Readings</fullName>
                </value>
                <value>
                    <fullName>Weight Readings</fullName>
                </value>
                <value>
                    <fullName>Alert Details</fullName>
                </value>
                <value>
                    <fullName>Coaching Details</fullName>
                </value>
                <value>
                    <fullName>Incentive Management</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                    <isActive>false</isActive>
                    <label>Activation</label>
                </value>
                <value>
                    <fullName>Blood Glucose Checks </fullName>
                    <isActive>false</isActive>
                    <label>Blood Glucose Checks </label>
                </value>
                <value>
                    <fullName>Cumulative Enrollment, Activation, and Usage</fullName>
                    <isActive>false</isActive>
                    <label>Cumulative Enrollment, Activation, and Usage</label>
                </value>
                <value>
                    <fullName>Custom Request (provide detail in task description)</fullName>
                    <isActive>false</isActive>
                    <label>Custom Request (provide detail in task description)</label>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                    <isActive>false</isActive>
                    <label>Enrollment</label>
                </value>
                <value>
                    <fullName>High Usage</fullName>
                    <isActive>false</isActive>
                    <label>High Usage</label>
                </value>
                <value>
                    <fullName>Usage</fullName>
                    <isActive>false</isActive>
                    <label>Usage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <description>Indicates how often the report(s) need to be delivered to the client or partner</description>
        <inlineHelpText>Indicates how often the report(s) need to be delivered to the client or partner</inlineHelpText>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Method_of_Delivery__c</fullName>
        <description>Indicates how reports will be delivered to the client or partner</description>
        <inlineHelpText>Indicates how reports will be delivered to the client or partner</inlineHelpText>
        <label>Reporting Method of Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Livongo SFTP (client pull from Livongo)</fullName>
                </value>
                <value>
                    <fullName>Go Anywhere Portal (Livongo reporting portal)</fullName>
                </value>
                <value>
                    <fullName>Client/Partner SFTP (Livongo push to client/partner)</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                    <isActive>false</isActive>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>Box-Client Access</fullName>
                    <isActive>false</isActive>
                    <label>Box-Client Access</label>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                    <isActive>false</isActive>
                    <label>SFTP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Registration_Code_Status__c</fullName>
        <label>Requested Registration Code Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Disabled From Search</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Livongo_ROI_timeline__c</fullName>
        <inlineHelpText>Has the Livongo ROI timeline been shared with the client?</inlineHelpText>
        <label>Shared Livongo ROI timeline ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingIds__c</fullName>
        <label>Share to Chatter Groups (ID)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ChatterGroupSharingNames__c</fullName>
        <label>Share to Chatter Groups (Name)</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ProjectColor__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_End__c</fullName>
        <description>Used to track the date of when the project is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Child Projects</relationshipLabel>
        <relationshipName>Project_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Start__c</fullName>
        <description>Used to track the date of when the project is scheduled to start.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TextColor__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBillableHours__c</fullName>
        <label>Actual Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the project is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the project was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the project. Calculated as the difference between the project Start Date and the project Actual Completion Date.</description>
        <formula>IF(
    (TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1) &gt; 0,
    TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1,
    null
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that it took to complete the project.</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAddFormsGuestUserToProjectTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A behind-the-scenes field that controls the addition/removal of the TaskRay Forms Public Site Guest User to the Project Team.</description>
        <inlineHelpText>A behind-the-scenes field that controls the addition/removal of the TaskRay Forms Public Site Guest User to the Project Team.</inlineHelpText>
        <label>Add Forms Guest User to Project Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the project</description>
        <label>Available for External Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines project’s default business hour availability. Tasks will not be scheduled for any days designated as non-working days.</description>
        <label>Project Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCloneOperationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Project has been successfully cloned from a template. This field is automatically set to true when the clone operation is complete.</description>
        <inlineHelpText>Indicates a Project has been successfully cloned from a template. This field is automatically set to true when the clone operation is complete.</inlineHelpText>
        <label>Clone Operation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a project is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the project.</description>
        <inlineHelpText>Indicates whether a project is complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomerOnboardingScore__c</fullName>
        <description>A calculated customer onboarding score based on a project&apos;s Initial Projected Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</description>
        <inlineHelpText>A calculated customer onboarding score based on a project&apos;s Initial Projected Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</inlineHelpText>
        <label>Customer Onboarding Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on Opportunity.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Project is a draft template.</description>
        <inlineHelpText>This field is controlled behind-the-scenes and determines if a Project is a draft template.</inlineHelpText>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedBillableHours__c</fullName>
        <label>Estimated Billable Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedDuration__c</fullName>
        <description>Used to track the estimated number of days that it should take to complete the project as scheduled. Calculated as the difference between the project Start Date and the project Estimated End Date.</description>
        <formula>IF( 
(TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1) &gt; 0, 
TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated number of days that it should take to complete the project as scheduled.</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalFeedback__c</fullName>
        <description>External feedback about a customer&apos;s onboarding experience.</description>
        <inlineHelpText>Use this field to capture external feedback about a customer&apos;s onboarding experience.</inlineHelpText>
        <label>External Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalLink__c</fullName>
        <description>This field will be populated with a link to a public site when the &quot;Available for external sharing&quot; checkbox is checked</description>
        <formula>IF( TASKRAY__trAvailableExternal__c ,
  HYPERLINK( $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c +&apos;?pid=&apos;+ Id +&apos;&amp;fullScreen=true&amp;view=planning&apos;, $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c +&apos;?pid=&apos;+ Id +&apos;&amp;fullScreen=true&amp;view=planning&apos;),
  null)</formula>
        <label>External Sharing Link</label>
        <type>Text</type>
    </fields>
</CustomObject>